--- a/PPcss.css
+++ b/PPcss.css
@@ -1,25 +1,236 @@
 *{
 		margin: 0;
 		padding: 0;
+		color: green;
+		scroll-behavior: smooth;
 	}
+	
+body{
+	background-color: rgb(28, 28, 28);
+}
+
+#hcontainer{
+	position: fixed;
+	top:0;
+	display: flex;
+	width: 100%;
+	height: 85px;
+	background: black;
+	z-index: 3;
+}
+
+#hitem1{
+	display: flex;
+	height:100%;
+	width: 50%;
+	background: black;
+	font-family: 'Griffy', cursive;
+	
+}
+
+#title{
+	align-self: center;
+	font-size: 50px;
+	color: #FA8C00;
+	margin-left: 10px;
+}
+
+#hitem2{
+	display: flex;
+	height:100%;
+	width:50%;
+	background: black;
+	flex-direction: row;
+}
+
+#header-img{
+	height:100%;
+	width: auto;
+}
+
+#nav-bar a:link{
+	color:#FA8C00;
+	text-decoration: none;
+}
+
+#nav-bar a:visited{
+	color:#FA8C00;
+	text-decoration: none;
+}
+
+#nav-bar a:hover{
+	color:black; 
+	text-decoration: none;
+	background-color: #FA8C00;
+}
+
+#nav-bar a:active{
+	position: relative;
+	font-size:30px;
+	color:black; 
+	text-decoration: none;
+	transform: scale(.95);
+}
+
+.nav-link{
+	padding: 22px;
+	background-color: black;
+	justify-self: center;
+	font-family: 'Alegreya', serif;
+
+}
 
 #nav-bar{
-	position: fixed;
+	justify-self: end;
+	align-self: center;
+	font-size: 30px;
+	display: flex;
+	margin-left: auto;
 }
 
 @media screen and (max-width: 600px){
 	}	
 	
 #container1{
+	margin-left: auto;
+	margin-right: auto;
 	display: flex;
 	flex-direction: column;
 	background-color: blue;
-	height: 600px;
-	width: 600px;
+	
+	height: 100%;
+	width: 100%;
+	justify-content: center;
 }
 
+#item2{
+	display: block;
+	height: 85vh;
+	width: 100%;
+	background-color: black;
+	padding-top: 100px;
+	color: #FA8C00;
+	text-align: center;
+}
+
+#home{
+	font-size: 90px;
+	position:relative;
+	top: 70px;
+	color: #FA8C00;
+	font-family: 'Alegreya', serif;
+	margin: auto;
+	font-weight: bold;
+	
+}
+
+#home2{
+	font-size: 40px;
+	color: #FA8C00;
+	font-family: 'Alegreya', serif;
+	margin: auto;
+	position: relative;
+	top: 70px;
+}
+
+#youtube{
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#img-div{
+	margin-top: 50px;
+	height: 300px;
+	width: 100%;
+	background-color: grey;
+	display: flex;
+	justify-content: space-between;
+}
+
+img{
+	max-height: 300px;
+	width: auto;
+}
+	
+
 #item1{
-	height: 200px;
-	width: 300px;
+	display: flex;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 50px;
+	height: 125px;
+	width: 100%;
 	background: red;
+	justify-content: center;
+	align-content: center;
+}
+
+#form{
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+
+#submitdiv{
+	height:50px;
+	width: 20%;
+	background-color: blue;
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: auto;
+} 
+
+#submit{
+	height: 30px;
+	width: 100%;
+	margin-top: auto;
+	align-self: center;
+	background: #FA8C00;
+	color: black;
+	font-size: 15px;
+	border: none;
+}
+
+
+#emaildiv{
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	height:50px;
+	width: 50%;
+	background-color: purple;
+}
+
+#email{
+	float: none;
+	height:50px;
+	width:100%;
+	margin-left: auto;
+	margin-right: auto;
+	align-self: center;
+}
+	
+	
+
+#footer-div{
+	display: flex;
+	height: 100px;
+	width: 100%;
+	align-items: center;
+	flex-direction: row;
+	background-color: orange;
+	font-size: 30px;
+}
+
+#yt-link{
+	margin-right: auto;
+}
+
+#insta-link{
+	margin-left: auto;
+}
+
+a:link{
+	text-decoration: none;
 }
