--- a/PPcss.css
+++ b/PPcss.css
@@ -96,11 +96,18 @@ body{
 	margin-right: auto;
 	display: flex;
 	flex-direction: column;
-	background-color: blue;
-	
+	background-color: black;
 	height: 100%;
 	width: 100%;
 	justify-content: center;
+}
+
+#yt-div{
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 30px;
+	height: 315px;
+	width: 560px;
 }
 
 #item2{
@@ -111,6 +118,26 @@ body{
 	padding-top: 100px;
 	color: #FA8C00;
 	text-align: center;
+}
+
+#continue{
+	position:relative;
+	padding: 15px;
+	background-color: #FA8C00;
+	text-align: center;
+	font-size: 30px;
+	top: 175px;
+	font-family: 'Alegreya', serif;
+	color: black;
+	border-radius: 10px;
+}
+
+#item2 a:active{
+	position: relative;
+	font-size:28px;
+	color:black; 
+	text-decoration: none;
+	transform: scale(.95);
 }
 
 #home{
@@ -136,15 +163,25 @@ body{
 #youtube{
 	margin-left: auto;
 	margin-right: auto;
+	
+}
+
+#spacing{
+	height:100px;
+	width:100%;
+	background:black;
 }
 
 #img-div{
 	margin-top: 50px;
+	margin-left: auto;
+	margin-right: auto;
 	height: 300px;
-	width: 100%;
-	background-color: grey;
+	width: 99%;
+	background-color: #202020;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
+	border-radius: 10px;
 }
 
 img{
