--- a/PPcss.css
+++ b/PPcss.css
@@ -6,7 +6,7 @@
 	}
 	
 body{
-	background-color: rgb(28, 28, 28);
+	background-color: black;
 }
 
 #hcontainer{
@@ -96,28 +96,40 @@ body{
 	margin-right: auto;
 	display: flex;
 	flex-direction: column;
-	background-color: black;
+	
 	height: 100%;
 	width: 100%;
 	justify-content: center;
 }
 
+
+
 #yt-div{
 	margin-left: auto;
 	margin-right: auto;
-	padding-top: 30px;
 	height: 315px;
 	width: 560px;
 }
 
+#item2-back{
+	height: 100vh;
+	width:100%;
+	background-image: url("https://i.imgur.com/AE68rwm.png");
+	background-attachment: fixed;
+	
+	background-size: contain;
+}
+
 #item2{
 	display: block;
-	height: 85vh;
+	height: 100vh;
 	width: 100%;
-	background-color: black;
+	background-color: rgba(0, 0, 0, 0.9);
+	
 	padding-top: 100px;
 	color: #FA8C00;
 	text-align: center;
+	
 }
 
 #continue{
@@ -167,9 +179,16 @@ body{
 }
 
 #spacing{
-	height:100px;
+	height:75px;
 	width:100%;
-	background:black;
+	
+}
+
+#drawings{
+	text-align: center;
+	font-size: 50px;
+	font-family: 'Alegreya', serif;
+	color: #FA8C00;
 }
 
 #img-div{
@@ -191,28 +210,37 @@ img{
 	
 
 #item1{
-	display: flex;
+	
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 50px;
-	height: 125px;
-	width: 100%;
-	background: red;
+	margin-top: 100px;
+	
+	height: 225px;
+	width:  50%;
+	background-color: #202020;
 	justify-content: center;
 	align-content: center;
+	border-radius: 10px;
 }
 
 #form{
-	display: block;
 	width: 100%;
 	height: 100%;
+}
+
+#info{
+	text-align: center;
+	font-size: 50px;
+	margin-bottom: 50px;
+	font-family: 'Alegreya', serif;
+	color: #FA8C00;
 }
 
 
 #submitdiv{
 	height:50px;
 	width: 20%;
-	background-color: blue;
+	
 	margin-top: 10px;
 	margin-left: auto;
 	margin-right: auto;
@@ -227,6 +255,8 @@ img{
 	color: black;
 	font-size: 15px;
 	border: none;
+	border-radius: 5px;
+	font-family: 'Alegreya', serif;
 }
 
 
@@ -236,38 +266,126 @@ img{
 	display: block;
 	height:50px;
 	width: 50%;
-	background-color: purple;
 }
 
 #email{
 	float: none;
-	height:50px;
+	height:40px;
 	width:100%;
 	margin-left: auto;
 	margin-right: auto;
 	align-self: center;
+	font-size: 20px;
+	font-family: 'Alegreya', serif;
+	border-radius: 10px;
 }
 	
 	
 
 #footer-div{
 	display: flex;
-	height: 100px;
+	height: 140px;
 	width: 100%;
+	margin-top: 40px;
 	align-items: center;
-	flex-direction: row;
-	background-color: orange;
 	font-size: 30px;
+	justify-content: space-between;
 }
 
-#yt-link{
+#ytb-div{
+	display: flex;
+	height: 140px;
+	width: 20%;
+	flex-direction: column;
+}
+
+#yt-button{
+	position: relative;
+	right: 9px;
+	height: 75px;
+	width: auto;
+	text-align: center;
+	border-style: solid;
+	padding: 10px;
+	border-width: 2px;
+	border-color: orange;
+	border-radius: 50%;
+	
+	
+}
+
+#ytlabel{
+	text-align: center;
+	color: #FA8C00;
+}
+
+#yt-linkb{
+	padding-left: 0px;
+	width: 27%;
+	margin-left: auto;
 	margin-right: auto;
 }
 
-#insta-link{
+#yt-link{
+	padding-left: 0px;
+	width: 50%;
 	margin-left: auto;
+	margin-right: auto;
+}
+
+#instab-div{
+	display: flex;
+	justify-content: center;
+	height: 150px;
+	width: 20%;
+	background: red;
+}	
+	
+#insta-button{
+		position: relative;
+	right: 12px;
+	height: 75px;
+	width: auto;
+	text-align: center;
+	border-style: solid;
+	padding: 10px;
+	border-width: 2px;
+	border-color: orange;
+	border-radius: 50%;
+}
+	
+
+#insta-link{
+
 }
 
 a:link{
 	text-decoration: none;
 }
+
+#copyright{
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100px;
+	width: 99%;
+	background: #202020;
+}
+
+#c1{
+	font-size: 20px;
+	color: #FA8C00;
+	font-family: 'Alegreya', serif;
+}
+
+#c2{
+	padding-left: 10px;
+	font-size: 30px;
+	color: #FA8C00;
+	font-family: 'Griffy', cursive;
+}
+	
